# own-wedding-website

./: Procfile  README.md  manage.py  pyproject.toml  requirements.txt
lg/: settings.py  urls.py
lg/core/: apps.py
lg/core/templates/: index.html
