[tool.poetry]
name = "own-wedding-website"
version = "0.1.0"
description = "Inicio do projeto do meu site de casamento, pode ser usado como base para o seu também."
authors = ["Gustavo Martins <kernelgm@gmail.com>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
django = "^4.2.4"
dj-database-url = "^2.1.0"
gunicorn = "^21.2.0"
psycopg2 = "^2.9.7"
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length =  79

[tool.taskipy.tasks]
lint = "blue . && isort ."
django = "python manage.py runserver"
docs = "mkdocs serve"
